added the reinforcments

--- a/reinforced_learning.ipynb
+++ b/reinforced_learning.ipynb
@@ -2,52 +2,59 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e93446fa66ed5ab4",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Reinforced Learning \n",
+    "\n",
+    "<p>Reinforced Learning is when a machine learns from experience and takes proper decisions in order to maximize its reward to get the best reward possible.<p>\n",
     "\n",
     "<p>Libraries used:\n",
     "\n",
     "import gymnasium as gym: This is the primary library used for reinforcement learning environments. It provides a variety of environments and tools to test and develop RL algorithms. Here, it's used to create and interact with the CartPole environment.\n",
-    "import time: Manages time-related functions, such as pausing the simulation when an episode ends.\n",
     "\n",
     "<p>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e93446fa66ed5ab4"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "import gymnasium as gym\n",
-    "import time\n"
-   ],
+   "execution_count": 1,
+   "id": "9b7639367e9ec0b8",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-08-22T09:21:00.115624Z",
      "start_time": "2024-08-22T09:20:59.908102Z"
-    }
+    },
+    "collapsed": false
    },
-   "id": "9b7639367e9ec0b8",
-   "execution_count": 1
+   "outputs": [],
+   "source": [
+    "import gymnasium as gym\n",
+    "import time"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ab7989282d038938",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# initialise the CartPole environment with human rendering\n",
     "env = gym.make('CartPole-v1', render_mode='human')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ab7989282d038938"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "987d8a2ea2b43d25",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# returns an initial state\n",
@@ -57,26 +64,28 @@
     "\n",
     "# render the environment\n",
     "env.render()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "987d8a2ea2b43d25"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7900519abd22ba9f",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Test a single step in the environment by pushing the cart left\n",
     "env.step(0)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7900519abd22ba9f"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "37fe6e22ce942eee",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -91,27 +100,28 @@
     "\n",
     "# reward threshold per episode\n",
     "env.spec.reward_threshold"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "37fe6e22ce942eee"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "42f329561521ec9e",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## State and Action spaces\n",
     "\n",
     "<p> Observation Space: What the state vector contains (e.g., cart position, velocity, pole angle).\n",
     "Action Space: The possible actions the agent can take (e.g., move left or right). <p>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "42f329561521ec9e"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ce449c543afdca44",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -132,15 +142,14 @@
     "            time.sleep(.5)\n",
     "            break\n",
     "env.close()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ce449c543afdca44",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "65dadbba57e8243c",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "<img src=\"https://images.ctfassets.net/xjan103pcp94/5h5ZwNAqLHAIRZ9jPGvRU1/6ceb65f718883cf2e7b8ca9dcd0a5fc4/Blog_-_intro_reinforcement_2.png\" width=\"50%\" />\n",
     "\n",
@@ -160,21 +169,17 @@
     "    -> [Pause if Terminated]\n",
     "  -> [Close Environment]\n",
     " <p>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "65dadbba57e8243c"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<https://livebook.manning.com/concept/reinforcement-learning/cart-pole-environment>"
-   ],
+   "id": "c4b282e99e4696a",
    "metadata": {
     "collapsed": false
    },
-   "id": "c4b282e99e4696a"
+   "source": [
+    "<https://livebook.manning.com/concept/reinforcement-learning/cart-pole-environment>"
+   ]
   }
  ],
  "metadata": {
